# SCA-EMPX

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/config/: config.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/ml/: __init__.py  face_model.py  inference.py
backend/app/schemas/: __init__.py  autorizacion.py  event.py  persona.py  usuario.py
backend/app/services/: __init__.py  access_service.py  autorizacion_service.py  event_service.py  persona_service.py  usuario_service.py
backend/app/static/: administracion-usuarios.html  autorizacion-visita.html  dashboard.html  editar-persona.html  historial-accesos.html  inicio.html  listado-personas.html  personas-dentro.html  registrar-salida.html  registro-empleado.html  registro-visitante.html  reporte-accesos.html  revocar-autorizacion.html  validate-access.html
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/api/: test_acceso.py  test_catalogos.py  test_events.py  test_personas.py  test_visitas.py
backend/tests/assets/: README.md
backend/tests/ml/: test_fallback_model.py  test_hf_model.py  test_pipeline.py
backend/tests/unit/: test_database.py  test_face_utils.py  test_models.py
docs/: 00-indice.md  01-contexto-empresarial.md  02-caso-de-negocio.md  03-requerimientos-srs.md  04-arquitectura.md  05-modelo-datos.md  06-historias-usuario.md  07-procesos-bpmn.md  08-definicion-proyecto.md  09-tareas-por-hu.md  bitacora-desarrollo.md  guia-git.md  guia-uso-aplicacion.md  orden-desarrollo-features.md  urls-acceso.md
frontend/src/: acceso.html  configuracion.html  index.html  registro.html  visitante.html
frontend/src/static/: ws-client.js
migration/: bd.sql
scripts/: README.md  clear_personas.py  fix_registro_acceso_table.py  init_db.py
(+15 files in other folders)
