[project]
name = "sca-empx"
version = "0.1.0"
description = "Sistema de Control de Acceso Físico y Registro de Ingresos/Salidas - STI S.A.S."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
]
