[project]
name = "sca-empx"
version = "0.1.0"
description = "Sistema de Control de Acceso Físico y Registro de Ingresos/Salidas - STI S.A.S."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "deepface>=0.0.79",
    "opencv-python-headless>=4.8.0",
    "tf-keras>=2.0.0",
    "huggingface-hub>=1.4.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "onnxruntime>=1.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: tests que cargan modelos ML pesados (HuggingFace o DeepFace). Omitir con -m 'not slow'.",
]
